[package]
name = "fx2d"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
winit = "0.28"
wgpu = "0.16"
log = "0.4"
simplelog = "0.12"
pollster = "0.3"
bytemuck = { version = "1.12", features = [ "derive" ] }